namespace MiniEcommerce.Models
{
    public class ItemVenda
    {
        public int Id { get; set; }
        public int ProdutoId { get; set; }
        public int Quantidade { get; set; }
    }
}
